<resources>
    <string name="app_name">upApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_validar_usuario">Validar Usuario</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Name must be >5 characters</string>
    <string name="invalid_lastname">LastName must be >5 characters</string>
    <string name="invalid_phone">Phone must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>


    <string name="user_name">User name</string>
    <string name="name">Name</string>
    <string name="lastname_user">Last Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="button_back">Back</string>

    <string name="profile_title">Vista profile</string>
    <string name="user_list">Lista de usuarios:</string>
    <string name="list_name_user">Nombre</string>
    <string name="list_name_age">edad</string>
    <string name="list_btn_actions">Option</string>
</resources>